Ensures proper sizing and alignment of input groups within inline and navbar forms.
* Uses `inline-table` on the input group
* Nukes the widths to `width: auto`—without this, the parent input
group doesn’t size correctly and functions as `display: table;` or
`block`

--- a/less/framework/forms.less
+++ b/less/framework/forms.less
@@ -445,6 +445,17 @@ input[type="checkbox"],
       vertical-align: middle;
     }
 
+    .input-group {
+      display: inline-table;
+      vertical-align: middle;
+
+      .input-group-addon,
+      .input-group-btn,
+      .form-control {
+        width: auto;
+      }
+    }
+
     // Input groups need that 100% width though
     .input-group > .form-control {
       width: 100%;
